--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 							</ul>
 						</li>
 						<li><a href="http://www.zacharysmith.science/works-of-navitas">Art</a></li>
-						<li><a href="http://www.zacharysmith.science/resume">Résumé<span class="sr-only">(current)</span></a></li>
+						<li><a href="http://www.zacharysmith.science/contact">Contact<span class="sr-only">(current)</span></a></li>
 							
 					</ul>
 				</div><!-- /.navbar-collapse -->
@@ -120,7 +120,9 @@
 						<button type="submit">Send</button>
 					</form>
 				</div>
-
+				<footer>
+					<p><a href="http://www.zacharysmith.science/contact">Contact</a> &middot; <a href="#">Press</a></p>
+				</footer>
 			</div>
 		</div>
 
